--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.6.2",
+    "firebase": "^8.6.3",
+    "notyf": "^3.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactfire": "^3.0.0-rc.0",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.1"
   },
